manifests/riot/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
    service: riot
  name: riot
  namespace: synapse
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: riot
  sessionAffinity: None
  type: ClusterIP
