manifests/riot/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: synapse
    service: riot
  name: riot
  namespace: synapse
spec:
  host: $(SITE_HOSTNAME)
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: riot
    weight: 100
  wildcardPolicy: None
